// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameContext GameProvider renders properly 1`] = `
<ContextProvider
  value={
    {
      "gameInfo": {
        "bunch": [],
        "gameId": "gameId",
        "gameName": "",
        "isInProgress": false,
        "players": [],
        "previousSnapshot": null,
      },
      "handleDump": [MockFunction handleDump],
      "handleMoveTileFromBoardToHand": [MockFunction handleMoveTileFromBoardToHand],
      "handleMoveTileFromHandToBoard": [MockFunction handleMoveTileFromHandToBoard],
      "handleMoveTileOnBoard": [MockFunction handleMoveTileOnBoard],
      "handlePeel": [MockFunction handlePeel],
      "isInGame": true,
    }
  }
>
  Children
</ContextProvider>
`;

exports[`GameContext getEmptyGameState generates default empty state 1`] = `
{
  "gameInfo": {
    "bunch": [],
    "gameId": "gameId",
    "gameName": "",
    "isInProgress": false,
    "players": [],
    "previousSnapshot": null,
  },
  "handleDump": [Function],
  "handleMoveTileFromBoardToHand": [Function],
  "handleMoveTileFromHandToBoard": [Function],
  "handleMoveTileOnBoard": [Function],
  "handlePeel": [Function],
  "isInGame": false,
}
`;
